tests/e2e/gateway-serviceaccounttoken/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg-sa-test
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    management:
      cluster:
        hostname: gateway.brcmlabs.com
      username: admin
      password: 7layer
    autoscaling:
      enabled: false
    autoMountServiceAccountToken: true
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    service:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
