tests/e2e/gateway-serviceaccounttoken/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-sa-test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: ssg-sa-test
        - secretRef:
            name: ssg-sa-test
        image: docker.io/caapim/gateway:11.2.1
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: gateway
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9443
          name: management
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/license/license.xml
          name: gateway-license
          subPath: license.xml
        - mountPath: /opt/docker/rc.d/load-service-account-token.sh
          name: service-account-token-script
          subPath: load-service-account-token.sh
        - mountPath: /opt/docker/rc.d/base/update-service-account-token.xml
          name: service-account-token-template
          subPath: update-service-account-token.xml
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/ssg-sa-test-listen-port-bundle
          name: ssg-sa-test-listen-port-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/0
          name: ssg-sa-test-repository-bundle-dest
        - mountPath: /graphman/config.json
          name: ssg-sa-test-repository-init-config
          subPath: config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gateway-license
        secret:
          defaultMode: 493
          items:
          - key: license.xml
            path: license.xml
          optional: false
          secretName: gateway-license
      - configMap:
          defaultMode: 493
          items:
          - key: load-service-account-token
            path: load-service-account-token.sh
          name: ssg-sa-test-gateway-files
          optional: false
        name: service-account-token-script
      - configMap:
          defaultMode: 493
          items:
          - key: service-account-token-template
            path: update-service-account-token.xml
          name: ssg-sa-test-gateway-files
          optional: false
        name: service-account-token-template
      - configMap:
          defaultMode: 493
          name: ssg-sa-test-listen-port-bundle
          optional: false
        name: ssg-sa-test-listen-port-bundle
      - emptyDir: {}
        name: ssg-sa-test-repository-bundle-dest
      - configMap:
          defaultMode: 493
          name: ssg-sa-test-repository-init-config
          optional: false
        name: ssg-sa-test-repository-init-config
